fix: replace deprecated URL(String) with URI.toURL()